                    --with-sys-getrandom
                    --without-sys-getrandom
                  Autotools: Fix "make run-xmltest" for out-of-source builds
       #244 #264  CMake: Add argument -DXML_ATTR_INFO=ON
       #239 #277  CMake: Add arguments
                    -DUSE_GETRANDOM=(ON|OFF|AUTO)
                    -DUSE_SYS_GETRANDOM=(ON|OFF|AUTO)
            #265  CMake: Fix linking with MinGW
                  CMake: Migrate files from Windows to Unix line endings
       #299 #302  Windows: Replace LoadLibrary hack to access
                    unofficial API function SystemFunction036 (RtlGenRandom)
                    by using official API function rand_s (needs WinXP+)
             #14  Drop an OpenVMS support leftover
  #235 #268 #270  Address compiler warnings
    #282 #283 ..
       #284 #285  Address cppcheck warnings
       #294 #295  Address Clang Static Analyzer warnings
        #24 #293  Mass-apply clang-format 9 (and ensure conformance during CI)

        Special thanks to:
            David Loffredo
            Khajapasha Mohammed
            Kishore Kunche
            Marco Maggi
            Rolf Ade
            xantares

Release 2.2.7 Wed June 19 2019
        Security fixes:
       #186 #262  CVE-2018-20843 -- Fix extraction of namespace prefixes from
                    XML names; XML names with multiple colons could end up in
                    the wrong namespace, and take a high amount of RAM and CPU
                    resources while processing, opening the door to
                    use for denial-of-service attacks

        Other changes:
       #195 #197  Autotools/CMake: Utilize -fvisibility=hidden to stop
                    exporting non-API symbols
            #227  Autotools: Add --without-examples and --without-tests
            #228  Autotools: Modernize configure.ac
       #245 #246  Autotools: Fix check for -fvisibility=hidden for Clang
       #247 #248  Autotools: Fix compilation for lack of docbook2x-man