@@ -277,3 +277,61 @@ if(BUILD_tests)
     target_link_libraries(runtestspp expat)
     add_test(runtestspp tests/runtestspp)
 endif(BUILD_tests)
+
+#
+# Summary
+#
+if(XML_UNICODE)
+    if(XML_UNICODE_WCHAR_T)
+        set(_EXPAT_CHAR_TYPE "wchar_t")
+    else()
+        set(_EXPAT_CHAR_TYPE "unsigned short")
+    endif()
+else()
+    set(_EXPAT_CHAR_TYPE "char")
+endif()
+
+message(STATUS "===========================================================================")
+message(STATUS "")
+message(STATUS "Configuration")
+message(STATUS "  Prefix ..................... ${CMAKE_INSTALL_PREFIX}")
+message(STATUS "  Shared libraries ........... ${BUILD_shared}")
+if(WIN32)
+    message(STATUS "  Static CRT ................. ${MSVC_USE_STATIC_CRT}")
+endif()
+message(STATUS "  Character type ............. ${_EXPAT_CHAR_TYPE}")
+message(STATUS "")
+message(STATUS "  Build documentation ........ ${BUILD_doc}")
+message(STATUS "  Build examples ............. ${BUILD_examples}")
+message(STATUS "  Build tests ................ ${BUILD_tests}")
+message(STATUS "  Build tools (xmlwf) ........ ${BUILD_tools}")
+message(STATUS "  Install files .............. ${INSTALL}")
+message(STATUS "")
+message(STATUS "  Features")
+message(STATUS "    Attributes info .......... ${XML_ATTR_INFO}")
+message(STATUS "    Context bytes ............ ${XML_CONTEXT_BYTES}")
+message(STATUS "    DTD support .............. ${XML_DTD}")
+message(STATUS "    Namespace support ........ ${XML_NS}")
+message(STATUS "")
+message(STATUS "  Entropy sources")
+if(WIN32)
+    message(STATUS "    rand_s ................... ON")
+else()
+    message(STATUS "    getrandom ................ ${HAVE_GETRANDOM}")
+    message(STATUS "    syscall SYS_getrandom .... ${HAVE_SYSCALL_GETRANDOM}")
+    message(STATUS "    libbsd ................... ${USE_libbsd}")
+    message(STATUS "    /dev/random .............. ${XML_DEV_URANDOM}")
+endif()
+message(STATUS "")
+if(CMAKE_GENERATOR STREQUAL "Unix Makefiles")
+    message(STATUS "Continue with")
+    message(STATUS "  make")
+    if(BUILD_tests)
+        message(STATUS "  make test")
+    endif()
+    if(INSTALL)
+        message(STATUS "  sudo make install")
+    endif()
+    message(STATUS "")
+endif()
+message(STATUS "===========================================================================")
